@@ -32,5 +32,5 @@ PLG_USER_PROFILE_FIELD_TOS_LABEL="Terms of Service:"
 PLG_USER_PROFILE_FIELD_WEB_SITE_DESC="Choose an option for the field Web Site"
 PLG_USER_PROFILE_FIELD_WEB_SITE_LABEL="Web site:"
 PLG_USER_PROFILE_OPTION_AGREE="Agree"
-PLG_USER_PROFILE_SLIDER_LABEL="User Profile"
+PLG_USER_PROFILE_SLIDER_LABEL="Custom Profile"
 PLG_USER_PROFILE_XML_DESCRIPTION="User Profile Plug-in"
